[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/Fonts/diffusion/ttf/diffusion-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/UiThemes/ButtonTheme.tres" type="StyleBox" id=2]
[ext_resource path="res://resources/Fonts/diffusion/ttf/diffusion-lightitalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/UiThemes/ButtonThemeFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/Scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://resources/Audio/Sfx/Coffee1.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/Audio/Sfx/Minimalist4.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=8]
color = Color( 1, 1, 1, 1 )
thickness = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.415686 )

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -181, 318 )
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ -152.0 ]
}

[node name="label_timer" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 5 )
text = "Timer 00:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug_rect" type="ReferenceRect" parent="."]
visible = false
anchor_left = 0.371094
anchor_top = 0.0133333
anchor_right = 0.628906
anchor_bottom = 0.133333
margin_top = -9.53674e-07
__meta__ = {
"_edit_use_anchors_": true
}

[node name="label_grid_position" type="Label" parent="debug_rect"]
margin_left = 6.0
margin_top = 6.0
margin_right = 596.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 5 )
text = "Grid position : (x,y)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_last_move" type="Label" parent="debug_rect"]
margin_left = 6.0
margin_top = 26.0
margin_right = 596.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 5 )
text = "Last move  : (x,y)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_whos_turn" type="Label" parent="debug_rect"]
margin_left = 6.0
margin_top = 46.0
margin_right = 46.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 5 )
text = "? turn"

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.317647 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="PauseMenu"]
margin_left = 50.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
text = "Pause Menu "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_resume" type="Button" parent="PauseMenu"]
margin_left = 32.0
margin_top = 200.0
margin_right = 682.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Resume"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_restart" type="Button" parent="PauseMenu"]
margin_left = 32.0
margin_top = 250.0
margin_right = 682.0
margin_bottom = 290.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Restart"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_setting" type="Button" parent="PauseMenu"]
margin_left = 32.0
margin_top = 300.0
margin_right = 682.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Settings"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_quit_game" type="Button" parent="PauseMenu"]
margin_left = 32.0
margin_top = 375.0
margin_right = 682.0
margin_bottom = 415.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.317647 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="SettingsMenu"]
margin_left = 50.0
margin_top = 50.0
margin_right = 380.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 7 )
text = "Pause Menu "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsMenu"]
margin_left = 50.0
margin_top = 125.0
margin_right = 290.0
margin_bottom = 254.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 7 )
text = "Settings
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenu"]
margin_left = 30.0
margin_top = 200.0
margin_right = 990.0
margin_bottom = 500.0
scroll_horizontal_enabled = false

[node name="controls" type="Control" parent="SettingsMenu/ScrollContainer"]

[node name="music_volume_label" type="Label" parent="SettingsMenu/ScrollContainer/controls"]
margin_right = 144.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Music Volume"

[node name="slider_music_volume" type="HSlider" parent="SettingsMenu/ScrollContainer/controls"]
margin_left = 150.0
margin_right = 550.0
margin_bottom = 30.0
custom_styles/slider = SubResource( 8 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 9 )
min_value = -72.0
max_value = 6.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_volume_label" type="Label" parent="SettingsMenu/ScrollContainer/controls"]
margin_top = 50.0
margin_right = 120.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "Sfx Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_sfx_volume" type="HSlider" parent="SettingsMenu/ScrollContainer/controls"]
margin_left = 150.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 80.0
custom_styles/slider = SubResource( 8 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 9 )
min_value = -72.0
max_value = 6.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotate_board_checkbtn" type="CheckButton" parent="SettingsMenu/ScrollContainer/controls"]
margin_top = 100.0
margin_right = 224.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 4 )
text = "Rotate Board"
flat = true

[node name="show_moves_checkbutton" type="CheckButton" parent="SettingsMenu/ScrollContainer/controls"]
margin_top = 150.0
margin_right = 224.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 4 )
text = "Show moves"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_settings_backs" type="Button" parent="SettingsMenu"]
margin_left = 32.0
margin_top = 500.0
margin_right = 682.0
margin_bottom = 540.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Back"
align = 0

[node name="BtnClickSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sfx"

[node name="PauseSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sfx"

[node name="GameFinishedScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameFinishedScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.317647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameFinishedScreen"]
margin_left = 50.0
margin_top = 50.0
margin_right = 380.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 6 )
text = "Game Finished"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_new_game" type="Button" parent="GameFinishedScreen"]
margin_left = 32.0
margin_top = 300.0
margin_right = 682.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "New Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_quit" type="Button" parent="GameFinishedScreen"]
margin_left = 32.0
margin_top = 400.0
margin_right = 682.0
margin_bottom = 440.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Quit Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseMenu/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="PauseMenu/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="PauseMenu/btn_setting" to="." method="_on_btn_setting_pressed"]
[connection signal="pressed" from="PauseMenu/btn_quit_game" to="." method="_on_btn_quit_game_pressed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/controls/slider_music_volume" to="." method="_on_slider_music_volume_value_changed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/controls/slider_sfx_volume" to="." method="_on_slider_sfx_volume_value_changed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/controls/rotate_board_checkbtn" to="." method="_on_rotate_board_checkbtn_pressed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/controls/show_moves_checkbutton" to="." method="_on_show_moves_checkbutton_pressed"]
[connection signal="pressed" from="SettingsMenu/btn_settings_backs" to="." method="_on_btn_settings_backs_pressed"]
[connection signal="pressed" from="GameFinishedScreen/btn_quit" to="." method="_on_btn_quit_game_pressed"]
